--- a/Awesome CV/resume/interests.tex
+++ b/Awesome CV/resume/interests.tex
@@ -21,4 +21,9 @@
   \cvskill
     {Philosophy} % Category
     {Stoicism, Vedic Philosophy, Buddhism, Zen} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Other} % Category
+    {Sport \&{} Fitness, Breathing Exercises, Fermentation} % Skills
 \end{cvskills}
