--- a/Awesome CV/resume/experience.tex
+++ b/Awesome CV/resume/experience.tex
@@ -19,6 +19,7 @@
       \item {Developing web pages for the clients}
       \item {Customising CSS of WordPress themes}
       \item {Setting up WordPress plugins}
+      \item {Participation in the development of mobile applications (Ract Native) }
       \item {Communication with the clients}
       \item {Organisation and coordination of the team}
       \end{cvitems}
@@ -34,17 +35,19 @@
     {Australia} % Location
     {Nov. 2020 - Aug. 2021} % Date(s)
     {
-    {
-    During the course I have built a number of projects using different technologies stacks. The most mature of them is Resume Builder App - The open-source web application for fast and easy creation and publishing (with unique public URL) of resumes 'tailored' for each particular vacancy.
+    {\singlespacing
+\begin{cvparagraph}
+During the course, I have built several projects using different technologies stacks. The most mature of them is Resume Builder App (work in progress) \textcolor{awesome}{\href{https://github.com/olimstv/resume-builder-app}{lets.Get(IT)}} - an open‐source web application for fast and easy creation and publishing of resumes, "tailored" for each particular job vacancy.
+\end{cvparagraph}
+\begin{cvparagraph}
+\textbf{STACK:} React, Next.js, MongoDB. 
+\end{cvparagraph}
+\begin{cvparagraph}
+Building this application, I've learned that integration of different technologies into one app might be challenging, but also it gives a significant improvement of developer's skills and knowledge base
+\end{cvparagraph}
     }
-    \begin{cvparagraph}
-    \end{cvparagraph}
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {\textcolor{awesome}{\href{https://github.com/olimstv/resume-builder-app}{lets.Get(IT)}} - built using React, Next.js, MongoDB. Building this application, I've learned that integration of different technologies into one app might be challenging, but also it gives a significant improvement of developer's skills and knowledge base}
-        \item {\textcolor{awesome}{\href{https://github.com/olimstv/rails_notes_app}{Memo}} - a simple notes-gathering app, built with React and Ruby on Rails, using PostgreSQL database. Learning how to build a backend using Ruby on Rails has broadened my perspective as a developer}
-        \item {\textcolor{awesome}{\href{https://github.com/olimstv/countless_app_v2.0}{CountLess}} - a budget app that helps track incomes and spending. Main focus for this project was building backend. I learned how to protect routes, how to use Passport.js package and  a basics of SSR using Handlebars}
-      \end{cvitems}
     }
+
 
 %---------------------------------------------------------
  \cventry
@@ -53,7 +56,10 @@
     {Australia} % Location
     {Feb. 2019 - Nov. 2020} % Date(s)
     {
-    {During this period (after moving to Australia), I put all my efforts into settling on the new place, learned a new culture, and embraced a commitment towards change and personal development. I continued my self-education in Software Development until I decided to take a leap and enrolled in a Full Stack Software Engineering Immersive course of General Assembly}
+    {\singlespacing 
+    \begin{cvparagraph}During this period (after moving to Australia), I put all my efforts into settling on the new place, learned a new culture, and embraced a commitment towards change and personal development. I continued my self-education in Software Development until I decided to take a leap and enrolled in a Full Stack Software Engineering Immersive course of General Assembly
+    \end{cvparagraph}
+    }
     \begin{cvparagraph}
     \end{cvparagraph}
     }
