--- a/Awesome CV/resume/skills.tex
+++ b/Awesome CV/resume/skills.tex
@@ -11,12 +11,12 @@
 %---------------------------------------------------------
   \cvskill
     {Front-end} % Category
-    {HTML, CSS, JavaScript, React, Next.js, Gatsby.js } % Skills
+    {HTML, CSS, JavaScript, Sass, React, Next.js, Gatsby.js } % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Back-end} % Category
-    {Node.js, Express, REST API, Ruby, Rails} % Skills
+    {Node.js, Express, REST API} % Skills
 
 %---------------------------------------------------------
   \cvskill
@@ -26,7 +26,7 @@
 %---------------------------------------------------------
   \cvskill
     {DevOps} % Category
-    {Heroku, AWS, Docker, Jenkins} % Skills
+    {Heroku, AWS, Docker} % Skills
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
