--- a/Awesome CV/resume.tex
+++ b/Awesome CV/resume.tex
@@ -55,7 +55,7 @@
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Oli (Oleksii)}{Mostovyi}
 % \position{Web Developer{\enskip\cdotp\enskip}Full Stack Software Developer{\enskip\cdotp\enskip}Full Stack Software Engineer}
-\position{Full Stack JavaScript Engineer}
+\position{Front End Software Engineer}
 \address{Adelaide, Australia}
 
 \mobile{(+61) 410 256 252}
