--- a/Awesome CV/resume/experience.tex
+++ b/Awesome CV/resume/experience.tex
@@ -16,12 +16,13 @@
     {Sep. 2021 - present} % Date(s)
     {
       \begin{cvitems} 
-      \item {Developing web pages for the clients}
-      \item {Customising CSS of WordPress themes}
-      \item {Setting up WordPress plugins}
-      \item {Participation in the development of mobile applications (Ract Native) }
+      \item {Developing and maintaining features of the \textcolor{awesome}{\href{https://primepractice.com.au}{"Prime Practice"}} company's e-commerce platform (WooCommerce)}
+      \item {Developing pages for the clients (WordPress)}
+      \item {Managing development (as well as developing) of the mobile application (React Native) for one of the research projects of Adelaide University}
+      \item {Structuring the content for a number of SCORM learning courses for the \textcolor{awesome}{\href{https://opentute.com/}{"Opentute"}} learning platform}
+      \item {Customizing CSS of WordPress themes}
+      \item {Managing and coordinating development processes}
       \item {Communication with the clients}
-      \item {Organisation and coordination of the team}
       \end{cvitems}
     }
 
