--- a/Awesome CV/coverletter.tex
+++ b/Awesome CV/coverletter.tex
@@ -126,7 +126,7 @@ Although in my current work for "Web Design Café", I have an excellent opportun
 \lettersection{Why Sine?}
 I believe that experience is the only thing we can truly own in our lives. And the most crucial thing in the World for me is to give to everyone surrounding me the and receive most positive, of the best possible quality life experience. I have a passion for developing tools and solutions for the improvement of people’s lives. I think that most of my views I’ve mentioned resonate with Sine, and this is one of the many reasons why I would love to become a part of your team.  
 \lettersection{Why Me?}
-As someone committed to personal growth, while working for my previous Employers, I have attended numerous training, webinars, and knowledge sharing sessions, allowing me to constantly erasing my level of technical and personal skills. Also, I have always understood the importance of interpersonal relations for the working process. So, one of my priorities working in teams is to build and maintain a positive and friendly atmosphere between colleagues and me. 
+As someone committed to personal growth, while working for my previous Employers, I have attended numerous training, webinars, and knowledge sharing sessions, allowing me constantly improve my level of technical and personal skills. Also, I have always understood the importance of interpersonal relations for the working process. So, one of my priorities working in teams is to build and maintain a positive and friendly atmosphere between colleagues and me.
 
 \end{cvletter}
 
