edit alighent CL

--- a/Awesome CV/coverletter.tex
+++ b/Awesome CV/coverletter.tex
@@ -54,7 +54,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 \photo[circle,edge,left]{main}
 \name{Oli (Oleksii)}{Mostovyi}
-\position{Full Stack JavaScript Engineer}
+\position{Front End Software Engineer}
 \address{Adelaide, Australia}
 
 \mobile{(+61) 410 256 252}
@@ -82,13 +82,13 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Sine Recruitment Team}{Sine\\ 100 Pirie St, Adelaide SA 5000}
+  {Aligent Consulting Recruitment Team}{Aligent Consulting\\ 14 Stamford Ct, Adelaide SA 5000}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Full Stack JavaScript Engineer}
+\lettertitle{Job Application for Front End Software Engineer}
 % How the letter is opened
-\letteropening{Dear Ms. Mugdh,}
+%\letteropening{Dear Ms. Mugdh,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -114,7 +114,7 @@
 %	LETTER CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvletter}
-Please accept this letter as an expression of my interest in the Full Stack JavaScript Engineer position.
+Please accept this letter as an expression of my interest in the Front End Software Engineer position.
 \lettersection{About Me}
 I am a highly motivated person with a positive outlook, focused on personal and professional progress. I have five years of experience in the IT industry as a Software Test Engineer. Although I haven't had years of experience in software development yet, my overall experience in the industry, alongside my software engineering skills, make me ready to contribute to the project's success. I am not afraid of a challenge. 
 
@@ -123,10 +123,10 @@ While working as a Test Engineer at GlobalLogic Inc., I performed analysis and s
 I completed the General Assembly Full‐Stack Software Engineering course. During that period, I built several projects showcased on my website. The most "mature" among them is "Resume Builder" (work in progress). It has a reasonable level of complexity. I'm using modern technologies (React, Next.js and MongoDB). The main idea is to optimize the resume composition's process (especially for junior developers) while applying for a job. 
 
 Although in my current work for "Web Design Café", I have an excellent opportunity to develop, in my opinion, necessary (for software engineers) Project Management skills, my passion for coding stays only partially satisfied. Hence, I'd love to join the workplace in a software developer role with promising possibilities for developing strong engineering skills.
-\lettersection{Why Sine?}
-I believe that experience is the only thing we can truly own in our lives. And the most crucial thing in the World for me is to give to everyone surrounding me the and receive most positive, of the best possible quality life experience. I have a passion for developing tools and solutions for the improvement of people’s lives. I think that most of my views I’ve mentioned resonate with Sine, and this is one of the many reasons why I would love to become a part of your team.  
+\lettersection{Why Aligent Consulting?}
+Striving for excellence and perfection has always attracted me. It probably has something to do with my upbringing: my father often told me that if you do something, do it in the best possible way or don’t start at all. He taught me this by his example. So whatever I do, I always dare to achieve the highest level of craftsmanship in it. Based on what I got from the internet about Aligent Consulting, I can see similar approaches, and this is one of the reasons I would be delighted to join the company.
 \lettersection{Why Me?}
-As someone committed to personal growth, while working for my previous Employers, I have attended numerous training, webinars, and knowledge sharing sessions, allowing me to constantly erasing my level of technical and personal skills. Also, I have always understood the importance of interpersonal relations for the working process. So, one of my priorities working in teams is to build and maintain a positive and friendly atmosphere between colleagues and me. 
+As someone committed to personal growth, while working for my previous Employers, I have attended numerous training, webinars, and knowledge sharing sessions, allowing me constantly improve my level of technical and personal skills. Also, I have always understood the importance of interpersonal relations for the working process. So, one of my priorities working in teams is to build and maintain a positive and friendly atmosphere between colleagues and me.
 
 \end{cvletter}
 
