edit sine CL (minor changes)

--- a/Awesome CV/coverletter.tex
+++ b/Awesome CV/coverletter.tex
@@ -120,13 +120,13 @@ I am a highly motivated person with a positive outlook, focused on personal and 
 
 While working as a Test Engineer at GlobalLogic Inc., I performed analysis and stabilization of existing automated tests and wrote new tests within existing test frameworks for testing software of medical devices (insulin pumps). The coding part of the testing was the most rewarding and exciting for me, and for this reason, I am pursuing a full‐time developer role. 
 
-I completed the General Assembly Full‐Stack Software Engineering course. During that period, I built several projects showcased on my website. The most "mature" among them is "Resume Builder" (work in progress). It has a reasonable level of complexity. I'm using modern technologies (React, Next.js and MongoDB). The main idea is to optimize the resume composition's process (especially for junior developers) while applying for a job. 
+I completed the General Assembly Full‐Stack Software Engineering course. During that period, I built several projects showcased on my website. The most "mature" among them is "Resume Builder" (work in progress). It has a reasonable level of complexity. I'm using modern technologies there (React, Next.js and MongoDB). The main idea of the app is to optimize the resume composition's process (especially for junior developers) while applying for a job. 
 
 Although in my current work for "Web Design Café", I have an excellent opportunity to develop, in my opinion, necessary (for software engineers) Project Management skills, my passion for coding stays only partially satisfied. Hence, I'd love to join the workplace in a software developer role with promising possibilities for developing strong engineering skills.
 \lettersection{Why Sine?}
-I believe that experience is the only thing we can truly own in our lives. And the most crucial thing in the World for me is to give to everyone surrounding me the and receive most positive, of the best possible quality life experience. I have a passion for developing tools and solutions for the improvement of people’s lives. I think that most of my views I’ve mentioned resonate with Sine, and this is one of the many reasons why I would love to become a part of your team.  
+I believe that experience is the only thing we can truly own in our lives. And the most crucial thing in the world to me is to give to everyone surrounding me (and receive back) the most positive, of the best possible quality life experience. I have a passion for developing tools and solutions to improve people’s lives. I think that most of the views I’ve mentioned resonate with Sine, and this is one of the many reasons I would love to become a part of your team. 
 \lettersection{Why Me?}
-As someone committed to personal growth, while working for my previous Employers, I have attended numerous training, webinars, and knowledge sharing sessions, allowing me to constantly erasing my level of technical and personal skills. Also, I have always understood the importance of interpersonal relations for the working process. So, one of my priorities working in teams is to build and maintain a positive and friendly atmosphere between colleagues and me. 
+As someone committed to personal growth, while working for my previous Employers, I have attended numerous training, webinars, and knowledge sharing sessions, allowing me constantly improve my level of technical and personal skills. Also, I have always understood the importance of interpersonal relations for the working process. So, one of my priorities working in teams is to build and maintain a positive and friendly atmosphere between colleagues and me.
 
 \end{cvletter}
 
