--- a/Awesome CV/coverletter.tex
+++ b/Awesome CV/coverletter.tex
@@ -120,7 +120,7 @@ I am a highly motivated person with a positive outlook, focused on personal and 
 
 While working as a Test Engineer at GlobalLogic Inc., I performed analysis and stabilization of existing automated tests and wrote new tests within existing test frameworks for testing software of medical devices (insulin pumps). The coding part of the testing was the most rewarding and exciting for me, and for this reason, I am pursuing a full‐time developer role. 
 
-I completed the General Assembly Full‐Stack Software Engineering course. During that period, I built several projects showcased on my website. The most "mature" among them is "Resume Builder" (work in progress). It has a reasonable level of complexity. I'm using modern technologies (React, Next.js and MongoDB). The main idea is to optimize the resume composition's process (especially for junior developers) while applying for a job. 
+I completed the General Assembly Full‐Stack Software Engineering course. During that period, I built several projects showcased on my website. The most "mature" among them is "Resume Builder" (work in progress). It has a reasonable level of complexity. I'm using modern technologies there (React, Next.js and MongoDB). The main idea of the app is to optimize the resume composition's process (especially for junior developers) while applying for a job. 
 
 Although in my current work for "Web Design Café", I have an excellent opportunity to develop, in my opinion, necessary (for software engineers) Project Management skills, my passion for coding stays only partially satisfied. Hence, I'd love to join the workplace in a software developer role with promising possibilities for developing strong engineering skills.
 \lettersection{Why Aligent Consulting?}
