--- a/Awesome CV/resume.tex
+++ b/Awesome CV/resume.tex
@@ -54,7 +54,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Oli (Oleksii)}{Mostovyi}
-% \position{Web Developer{\enskip\cdotp\enskip}Full Stack Software Developer{\enskip\cdotp\enskip}Full Stack Software Engineer}
+% \position{Web Developer{\enskip\cdotp\enskip}Front End Developer{\enskip\cdotp\enskip}Full Stack Software Developer}
 \position{Full Stack JavaScript Engineer}
 \address{Adelaide, Australia}
 
